--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+spring.data.mongodb.uri=mongodb+srv://${MONGODB_USER}:${MONGODB_PASSWORD}@${MONGODB_URL}
+spring.data.mongodb.database=caoc-inventory
+spring.jpa.hibernate.ddl-auto=update
+logging.level.org.hibernate.SQL=debug
